--- a/Assignment Baby steps.ipynb
+++ b/Assignment Baby steps.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "4356d879",
    "metadata": {},
    "outputs": [
@@ -83,53 +83,33 @@
      "output_type": "stream",
      "text": [
       "24.5\n",
+      "Normal Range\n",
       "24\n",
+      "Normal Range\n",
       "30\n",
+      "Obese\n",
       "18\n",
-      "18.5\n"
+      "Under Weight\n",
+      "18.5\n",
+      "Under Weight\n"
      ]
     }
    ],
    "source": [
     "lists=[24.5,24,30,18,18.5]\n",
     "for weight in lists:\n",
-    "    print(weight)"
+    "    print(weight)\n",
+    "    if(weight<=18.5):\n",
+    "        print(\"Under Weight\")\n",
+    "    elif(weight<=24.5):\n",
+    "        print(\"Normal Range\")\n",
+    "    elif(weight<=29.5):\n",
+    "        print(\"Over Weight\")\n",
+    "    elif(weight<=30):\n",
+    "        print(\"Obese\")\n",
+    "    else:\n",
+    "        print(\"Obsese Class I\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "9f2a663f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Under Weight\n"
-     ]
-    }
-   ],
-   "source": [
-    "if(weight<=18.5):\n",
-    "    print(\"Under Weight\")\n",
-    "elif(weight<=24.5):\n",
-    "    print(\"Normal Range\")\n",
-    "elif(weight<=29.5):\n",
-    "    print(\"Over Weight\")\n",
-    "elif(weight<=30):\n",
-    "    Print(\"Obese\")\n",
-    "else:\n",
-    "    print(\"Obsese Class I\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8e12a9e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
